--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+body {
+	padding-top: 70px;
+}
+footer .footer-main {
+    text-align: center;
+    padding: 50px 0;
+}
+footer .footer-social {
+    margin-top: 50px;
+    margin-bottom: 0;
+}
+
 hr {
 	width: 100%;
 }
@@ -389,3 +401,148 @@ input.form-control.input-number {
 		}
 }
 /*-------------------------------------------*/
+
+
+
+/*My Account Page*/
+
+.account_info_left_section td:first-child {
+	text-align: right;
+
+}
+.account_info_left_section td:nth-child(2) {
+	text-align: left;
+
+}
+
+.table_section a {
+	margin-top: 15px;
+}
+
+.panel_with_tabs > .panel-body {
+    padding: 0px;
+}
+
+
+
+
+
+
+/*
+Generic Styling, for Desktops/Laptops
+*/
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+/* Zebra striping */
+.zebra_stripe tr:nth-of-type(odd) {
+  background: #eee;
+}
+.zebra_stripe td:first-child {
+	text-align: right;
+}
+
+
+
+/*
+Max width before this PARTICULAR table gets nasty
+This query will take effect for any screen smaller than 760px
+and also iPads specifically.
+*/
+@media screen and (max-width: 760px)  {
+
+	/* Force table to not be like tables anymore */
+	.table_section table, .table_section thead, .table_section tbody, .table_section th, .table_section td, .table_section tr {
+		display: block;
+	}
+
+	/* Hide table headers (but not display: none;, for accessibility) */
+	.table_section thead tr {
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+
+	.table_section tr { border: 1px solid #ccc; }
+
+	.table_section td {
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee;
+		position: relative;
+		padding-left: 50%;
+	}
+
+	.table_section td:before {
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+		top: 6px;
+		left: 6px;
+		width: 45%;
+		padding-right: 10px;
+		white-space: nowrap;
+	}
+
+	/*
+	Label the data
+	*/
+	.table_section td:nth-of-type(1):before { content: "ID"; }
+	.table_section td:nth-of-type(2):before { content: "Stone Name"; }
+	.table_section td:nth-of-type(3):before { content: "Type"; }
+	.table_section td:nth-of-type(4):before { content: "Thickness"; }
+	.table_section td:nth-of-type(5):before { content: "Size"; }
+	.table_section td:nth-of-type(6):before { content: "Price"; }
+	.table_section td:nth-of-type(7):before { content: ""; }
+	.table_section td:nth-of-type(8):before { content: ""; }
+}
+
+/*-------------------------------------------*/
+
+
+
+
+
+
+
+
+.stepwizard-step p {
+    margin-top: 10px;
+}
+.stepwizard-row {
+    display: table-row;
+}
+.stepwizard {
+    display: table;
+    width: 100%;
+    position: relative;
+}
+.stepwizard-step button[disabled] {
+    opacity: 1 !important;
+    filter: alpha(opacity=100) !important;
+}
+.stepwizard-row:before {
+    top: 14px;
+    bottom: 0;
+    position: absolute;
+    content: " ";
+    width: 100%;
+    height: 1px;
+    background-color: #ccc;
+    z-order: 0;
+}
+.stepwizard-step {
+    display: table-cell;
+    text-align: center;
+    position: relative;
+}
+.btn-circle {
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    padding: 6px 0;
+    font-size: 12px;
+    line-height: 1.428571429;
+    border-radius: 15px;
+}
