--- a/css/style.scss
+++ b/css/style.scss
@@ -1,137 +1,189 @@
 body {
-  padding-top: 70px; }
+  padding-top: 70px;
+}
 
-footer .footer-main {
-  text-align: center;
-  padding: 50px 0; }
-footer .footer-social {
-  margin-top: 50px;
-  margin-bottom: 0; }
+footer {
+  .footer-main {
+    text-align: center;
+    padding: 50px 0;
+  }
+  .footer-social {
+    margin-top: 50px;
+    margin-bottom: 0;
+  }
+}
 
 hr {
-  width: 100%; }
+  width: 100%;
+}
 
 p, li {
-  /*font-size: 16px;*/ }
+  /*font-size: 16px;*/
+}
 
 .no-padding {
-  padding: 0px; }
+  padding: 0px;
+}
 
 .gi-2x {
-  font-size: 2em; }
+  font-size: 2em;
+}
 
 .gi-3x {
-  font-size: 3em; }
+  font-size: 3em;
+}
 
 .gi-4x {
-  font-size: 4em; }
+  font-size: 4em;
+}
 
 .gi-5x {
-  font-size: 5em; }
+  font-size: 5em;
+}
 
 /*Navigation Section*/
+
 .navbar-collapse {
-  padding: 0px; }
+  padding: 0px;
+}
 
 .main_logo_image {
-  padding: 2% 0px; }
+  padding: 2% 0px;
+}
 
 @media screen and (min-width: 768px) {
   ul#naviMainList {
     width: 100%;
     display: flex;
-    justify-content: space-between; }
-
+    justify-content: space-between;
+  }
   #naviMainList > li {
     width: 100%;
-    text-align: center; }
-
+    text-align: center;
+  }
   ul#naviTopList {
     width: 100%;
     display: flex;
-    justify-content: flex-end; } }
+    justify-content: flex-end;
+  }
+}
+
 /*-------------------------------------------*/
+
 /*Footer Section*/
+
 .footer_navi {
   display: flex;
   justify-content: space-around;
   list-style-type: none;
-  padding: 0px; }
+  padding: 0px;
+}
 
 .copy_right {
-  text-align: center; }
+  text-align: center;
+}
 
 /*-------------------------------------------*/
+
 /*Left side tabs*/
+
 .your_container_tab > .panel-heading {
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+}
 
 .ads_section {
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+}
 
 /*-------------------------------------------*/
+
 /*Slab List & Slab Card Section*/
+
 .slab_card {
-  padding: 5px; }
-  .slab_card .media {
+  padding: 5px;
+  .media {
     display: flex;
-    justify-content: space-around; }
-  .slab_card .panel-body {
-    padding: 5px; }
-  .slab_card .media-left {
+    justify-content: space-around;
+  }
+  .panel-body {
+    padding: 5px;
+  }
+  .media-left {
     padding-right: 0px;
     display: flex;
-    align-items: center; }
-  .slab_card .media-object {
+    align-items: center;
+  }
+  .media-object {
     width: 70px;
     height: 50px;
-    object-fit: cover; }
-  .slab_card:hover > .panel-default {
-    box-shadow: 0px 0px 13px #85A9B8; }
+    object-fit: cover;
+  }
+  &:hover > .panel-default {
+    box-shadow: 0px 0px 13px #85A9B8;
+  }
+}
 
 .search_by_name_container .input-group {
   position: relative;
   margin: 0 auto;
   padding: 35px 10px;
-  max-width: 350px; }
+  max-width: 350px;
+}
 
 h3.panel-title {
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap; }
+  white-space: nowrap;
+}
 
 @media screen and (min-width: 500px) and (max-width: 767px) {
   .slab_list {
     max-width: 450px;
-    margin: 0 auto; } }
-/*-------------------------------------------*/
-/*Video Section */
-.video_section {
-  text-align: center; }
-  .video_section > h2 {
-    padding: 25px 0; }
+    margin: 0 auto;
+  }
+}
 
 /*-------------------------------------------*/
+
+/*Video Section */
+
+.video_section {
+  text-align: center;
+  > h2 {
+    padding: 25px 0;
+  }
+}
+
+/*-------------------------------------------*/
+
 /*Client Section */
+
 .client_review_section > h2 {
   text-align: center;
-  padding: 25px 0; }
+  padding: 25px 0;
+}
 
 /*-------------------------------------------*/
+
 /*HOT TO BUY PAGE*/
+
 .tab-pane {
-  text-align: center; }
-  .tab-pane li {
-    list-style-type: none; }
+  text-align: center;
+  li {
+    list-style-type: none;
+  }
+}
 
 .four_easy_steps {
-  margin: 0 0 20px; }
-  .four_easy_steps > .col-sm-12 {
+  margin: 0 0 20px;
+  > .col-sm-12 {
     padding: 0;
     border: 1px solid #ddd;
-    border-radius: 1%; }
+    border-radius: 1%;
+  }
+}
 
 /*div#tab1 li, div#tab2 li {
     list-style-type: none;
@@ -141,185 +193,272 @@ div#tab1 > .left-section, div#tab2 > .left-section, div#tab3 > .left-section {
 }
 */
 /*-------------------------------------------*/
+
 /*SLABS PAGE*/
 /*.all_slabs_with_dropdown {
 	display: flex;
 	justify-content: space-between;
 }*/
+
 .right_side_slabs .well-lg {
   text-align: right;
-  margin-bottom: 0px; }
-  .right_side_slabs .well-lg h4 {
-    float: left; }
+  margin-bottom: 0px;
+  h4 {
+    float: left;
+  }
+}
 
 .all_slabs_with_dropdown {
-  margin: 10px; }
-  .all_slabs_with_dropdown p {
-    display: inline; }
+  margin: 10px;
+  p {
+    display: inline;
+  }
+}
 
 .page_navigation {
-  text-align: center; }
+  text-align: center;
+}
 
 /*-------------------------------------------*/
+
 /*SUPPLIERS PAGE*/
-.suppliers_card_list .card {
-  text-align: center;
-  border: 1px solid #ccc;
-  margin-top: 15px;
-  box-shadow: 0px 0px 15px #ccc; }
-.suppliers_card_list img.card-img-top {
-  border-bottom: 1px solid #ccc;
-  width: 100%;
-  height: 75px;
-  object-fit: cover; }
+
+.suppliers_card_list {
+  .card {
+    text-align: center;
+    border: 1px solid #ccc;
+    margin-top: 15px;
+    box-shadow: 0px 0px 15px #ccc;
+  }
+  img.card-img-top {
+    border-bottom: 1px solid #ccc;
+    width: 100%;
+    height: 75px;
+    object-fit: cover;
+  }
+}
 
 .card-block {
   height: 90px;
   display: flex;
   flex-direction: column;
-  justify-content: center; }
-  .card-block > h4, .card-block > p {
-    margin: 0px; }
+  justify-content: center;
+  > {
+    h4, p {
+      margin: 0px;
+    }
+  }
+}
 
 @media screen and (min-width: 992px) and (max-width: 1199px) {
   .suppliers_card_list {
-    padding: 5px; } }
+    padding: 5px;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .suppliers_card_list {
-    padding: 5px; } }
+    padding: 5px;
+  }
+}
+
 @media screen and (max-width: 525px) {
   .suppliers_card_list {
-    width: 33.3%; } }
+    width: 33.3%;
+  }
+}
+
 @media screen and (max-width: 400px) {
   .suppliers_card_list {
-    width: 50%; } }
-/*-------------------------------------------*/
-/*HELP PAGE*/
-.list_of_questions > .panel.panel-default {
-  margin-bottom: 20px; }
+    width: 50%;
+  }
+}
 
 /*-------------------------------------------*/
+
+/*HELP PAGE*/
+
+.list_of_questions > .panel.panel-default {
+  margin-bottom: 20px;
+}
+
+/*-------------------------------------------*/
+
 /*CONTACT US PAGE*/
+
 .form-group {
   margin: 10px auto;
   display: flex;
   justify-content: center;
   flex-direction: column;
-  /*width: 75%;*/ }
+  /*width: 75%;*/
+}
 
 .contact_info_card .media-left {
   width: 40%;
-  text-align: center; }
+  text-align: center;
+}
 
 /*-------------------------------------------*/
+
 /*ABOUT US PAGE*/
-.about_us_section .col-sm-5 {
-  text-align: center; }
-.about_us_section .row {
-  padding: 15px; }
+
+.about_us_section {
+  .col-sm-5 {
+    text-align: center;
+  }
+  .row {
+    padding: 15px;
+  }
+}
 
 @media screen and (min-width: 768px) {
   .reverse_these_columns {
     display: flex;
-    flex-direction: row-reverse; }
-
+    flex-direction: row-reverse;
+  }
   .about_us_section img {
-    width: 100%; } }
+    width: 100%;
+  }
+}
+
 /*-------------------------------------------*/
+
 /*SIGN IN PAGE*/
+
 .buyer_seller_buttons {
   display: flex;
   justify-content: space-around;
-  padding: 20px 0; }
+  padding: 20px 0;
+}
 
 @media screen and (max-width: 550px) {
   .buyer_seller_buttons .btn-default {
     width: 100px;
-    white-space: normal; } }
+    white-space: normal;
+  }
+}
+
 /*-------------------------------------------*/
+
 /*Individual Slab Page*/
+
 .tab_content_border {
   border-left: 1px solid #ccc;
   border-right: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
   border-bottom-left-radius: 5px;
   margin-top: -2px;
-  border-bottom-right-radius: 5px; }
+  border-bottom-right-radius: 5px;
+}
 
 .order_here_section .well {
-  margin: 0px; }
+  margin: 0px;
+}
 
 .plus_minus_quantity {
-  padding-bottom: 15px; }
-  .plus_minus_quantity .input-group-btn {
+  padding-bottom: 15px;
+  .input-group-btn {
     display: inline-flex;
-    padding-left: 26px; }
-  .plus_minus_quantity .form-control.input-number {
+    padding-left: 26px;
+  }
+  .form-control.input-number {
     float: none;
     width: 50px;
-    text-align: center; }
+    text-align: center;
+  }
+}
 
 /*-------------------------------------------*/
+
 /*Container Page*/
 /*td {
 	border: 1px solid #ccc;
 }*/
-.container_with_items .list-group {
-  padding: 0;
-  margin-bottom: 0px; }
-.container_with_items .list-group-item:nth-child(2) {
-  height: 150px; }
-  .container_with_items .list-group-item:nth-child(2) p {
-    margin-bottom: 0px; }
+
+.container_with_items {
+  .list-group {
+    padding: 0;
+    margin-bottom: 0px;
+  }
+  .list-group-item:nth-child(2) {
+    height: 150px;
+    p {
+      margin-bottom: 0px;
+    }
+  }
+}
 
 .container_total_of_slabs {
   display: flex;
-  justify-content: space-around; }
+  justify-content: space-around;
+}
 
 button.btn.btn-default.btn-number {
   width: 30px;
   height: 30px;
-  padding: 0; }
+  padding: 0;
+}
 
 input.form-control.input-number {
   height: 30px;
   width: 30px;
   padding: 0;
-  text-align: center; }
+  text-align: center;
+}
 
 .increase_decrease_button {
   /*affects container page and individual-slab page*/
   display: inline-flex;
-  width: 100%; }
+  width: 100%;
+}
 
 @media screen and (max-width: 600px) {
   .container_total_of_slabs {
-    flex-direction: column; } }
+    flex-direction: column;
+  }
+}
+
 /*-------------------------------------------*/
+
 /*My Account Page*/
-.account_info_left_section td:first-child {
-  text-align: right; }
-.account_info_left_section td:nth-child(2) {
-  text-align: left; }
+
+.account_info_left_section td {
+  &:first-child {
+    text-align: right;
+  }
+  &:nth-child(2) {
+    text-align: left;
+  }
+}
 
 .table_section a {
-  margin-top: 15px; }
+  margin-top: 15px;
+}
 
 .panel_with_tabs > .panel-body {
-  padding: 0px; }
+  padding: 0px;
+}
 
 /*
 Generic Styling, for Desktops/Laptops
 */
+
 table {
   width: 100%;
-  border-collapse: collapse; }
+  border-collapse: collapse;
+}
 
 /* Zebra striping */
-.zebra_stripe tr:nth-of-type(odd) {
-  background: #eee; }
-.zebra_stripe td:first-child {
-  text-align: right; }
+
+.zebra_stripe {
+  tr:nth-of-type(odd) {
+    background: #eee;
+  }
+  td:first-child {
+    text-align: right;
+  }
+}
 
 /*
 Max width before this PARTICULAR table gets nasty
@@ -328,63 +467,83 @@ and also iPads specifically.
 */
 @media screen and (max-width: 760px) {
   /* Force table to not be like tables anymore */
-  .table_section table, .table_section thead, .table_section tbody, .table_section th, .table_section td, .table_section tr {
-    display: block; }
-  .table_section thead tr {
-    position: absolute;
-    top: -9999px;
-    left: -9999px; }
-  .table_section tr {
-    border: 1px solid #ccc; }
-  .table_section td {
-    /* Behave  like a "row" */
-    border: none;
-    border-bottom: 1px solid #eee;
-    position: relative;
-    padding-left: 50%; }
-    .table_section td:before {
-      /* Now like a table header */
+  .table_section {
+    table, thead, tbody, th, td, tr {
+      display: block;
+    }
+    thead tr {
       position: absolute;
-      /* Top/left values mimic padding */
-      top: 6px;
-      left: 6px;
-      width: 45%;
-      padding-right: 10px;
-      white-space: nowrap; }
-    .table_section td:nth-of-type(1):before {
-      content: "ID"; }
-    .table_section td:nth-of-type(2):before {
-      content: "Stone Name"; }
-    .table_section td:nth-of-type(3):before {
-      content: "Type"; }
-    .table_section td:nth-of-type(4):before {
-      content: "Thickness"; }
-    .table_section td:nth-of-type(5):before {
-      content: "Size"; }
-    .table_section td:nth-of-type(6):before {
-      content: "Price"; }
-    .table_section td:nth-of-type(7):before, .table_section td:nth-of-type(8):before {
-      content: ""; }
-
+      top: -9999px;
+      left: -9999px;
+    }
+    tr {
+      border: 1px solid #ccc;
+    }
+    td {
+      /* Behave  like a "row" */
+      border: none;
+      border-bottom: 1px solid #eee;
+      position: relative;
+      padding-left: 50%;
+      &:before {
+        /* Now like a table header */
+        position: absolute;
+        /* Top/left values mimic padding */
+        top: 6px;
+        left: 6px;
+        width: 45%;
+        padding-right: 10px;
+        white-space: nowrap;
+      }
+      &:nth-of-type(1):before {
+        content: "ID";
+      }
+      &:nth-of-type(2):before {
+        content: "Stone Name";
+      }
+      &:nth-of-type(3):before {
+        content: "Type";
+      }
+      &:nth-of-type(4):before {
+        content: "Thickness";
+      }
+      &:nth-of-type(5):before {
+        content: "Size";
+      }
+      &:nth-of-type(6):before {
+        content: "Price";
+      }
+      &:nth-of-type(7):before, &:nth-of-type(8):before {
+        content: "";
+      }
+    }
+  }
   /* Hide table headers (but not display: none;, for accessibility) */
   /*
   Label the data
-  */ }
+  */
+}
+
 /*-------------------------------------------*/
+
 .stepwizard-step p {
-  margin-top: 10px; }
+  margin-top: 10px;
+}
 
 .stepwizard-row {
-  display: table-row; }
+  display: table-row;
+}
 
 .stepwizard {
   display: table;
   width: 100%;
-  position: relative; }
+  position: relative;
+}
 
 .stepwizard-step button[disabled] {
   opacity: 1 !important;
-  filter: alpha(opacity=100) !important; }
+  filter: alpha(opacity = 100) !important;
+}
 
 .stepwizard-row:before {
   top: 14px;
@@ -394,12 +553,14 @@ and also iPads specifically.
   width: 100%;
   height: 1px;
   background-color: #ccc;
-  z-order: 0; }
+  z-order: 0;
+}
 
 .stepwizard-step {
   display: table-cell;
   text-align: center;
-  position: relative; }
+  position: relative;
+}
 
 .btn-circle {
   width: 30px;
@@ -408,6 +569,6 @@ and also iPads specifically.
   padding: 6px 0;
   font-size: 12px;
   line-height: 1.428571429;
-  border-radius: 15px; }
+  border-radius: 15px;
+}
 
-/*# sourceMappingURL=style.css.map */
